# tutorial-python

./: .gitignore  LICENSE  README.md
lesson-01/: README.md
lesson-01/01/: hello_world.py
lesson-01/02/: escape_character.py
lesson-01/03/: stderr.py
lesson-01/04/: unpackaing_list.py
lesson-02/: README.md
lesson-02/01/: main.py  no_main.py
lesson-02/02/: main.py  second.py
lesson-02/03/: function.py
lesson-02/04/: arbitrary.py  parameter.py  positional_and_keyword.py
lesson-02/05/: assert.py  typecheck.py  typehint.py
lesson-02/06/: unpack.py
lesson-02/07/: lambda.py
lesson-02/08/: docstring.py
lesson-02/09/: inner.py
lesson-02/10/: funtional_programming.py
lesson-02/11/: yield.py  yield_from.py
lesson-03/: README.md
lesson-03/01/: if_else.py
lesson-03/02/: switch_case.py
lesson-03/03/: match.py
lesson-04/: README.md
lesson-04/01/: filter.py  for.py  multiplication.py  nested_for.py
lesson-04/02/: while.py
lesson-04/03/: break.py  continue.py  nested_for.py
lesson-04/04/: list_comprehension.py
lesson-04/05/: iteration.py
lesson-05/: README.md
lesson-05/01/: concat.py
lesson-05/02/: printf_style.py
lesson-05/03/: format.py
lesson-05/04/: f-string.py
lesson-05/05/: join.py
lesson-05/06/: comparision.py
lesson-05/07/: case.py
lesson-05/08/: t-string.py
lesson-06/: README.md
lesson-06/01/: throw_custom_exception.py  throw_derived_exception.py  throw_exception.py
lesson-06/02/: suppress.py  try_except.py  without_exception.py
lesson-06/03/: exception_group.py
lesson-07/: README.md
lesson-07/01/: animal.py  main.py
lesson-07/02/: animal.py  failed_main.py  main.py  new_writer.py  writer.py
lesson-07/03/: animal.py  main.py  new_temp.py  temp.py
lesson-07/04/: animal.py  main.py
lesson-07/05/: animal.py  main.py
lesson-07/06/: main.py
lesson-08/: README.md
lesson-08/01/: ini_parser.py  reader_all.py  reader_line_by_line.py  reader_lines.py
lesson-08/02/: file_directed_output.py  writer.py
lesson-08/03/: temp.py  tempfile_directed_output.py
lesson-08/04/: remove.py
lesson-09/: README.md
lesson-09/01/: config.ini  ini_parser.py
lesson-09/02/: config.json  json_parser.py
lesson-09/03/: html_parser.py  html_parser_v2.py  rate.html
lesson-09/04/: news.xml  xml_parser_dom.py  xml_parser_et.py  xml_parser_sax.py
lesson-09/05/: csv_parser.py  csv_reader.py  weather.csv
lesson-09/06/: yaml_parser.py
lesson-09/07/: pyproject.toml  toml_parser.py
lesson-1/01/: hello_world.py
lesson-1/04/: list.py
lesson-10/: README.md
lesson-11/: README.md
lesson-12/: README.md
lesson-13/: README.md
lesson-14/: README.md
lesson-14/04/: README.md  pyproject.toml
lesson-14/04/src/animal/: cli.py  mammalia.py
lesson-14/04/tests/: test_mammalia.py
lesson-15/: README.md
lesson-16/: README.md
lesson-17/: README.md
lesson-18/: README.md
lesson-19/: README.md
lesson-20/: README.md
lesson-21/: README.md
lesson-22/: README.md
lesson-23/: README.md
lesson-99/: README.md
(+144 files in other folders)
